Fix: Resolve parser errors and add missing dependencies
SpawnManager.gd:
- Fixed undefined variable 'enemy_y' -> 'margin_y' on line 91
- Enemy base Y position now correctly uses margin_y

PlayerController.gd:
- Fixed handle_area_selection parameter type: Dictionary -> untyped
- Changed from selection_object.get() to direct property access
- Matches actual signal parameter (Object with .start/.end properties)
- Resolves 'Cannot convert argument 1 from Object to Dictionary' error
- Fixes game freeze on drag selection release

requirements.txt:
- Added pyarrow dependency (required by ray[tune])
- Resolves ImportError when importing ray.rllib

Testing confirmed:
✅ Drag selection works
✅ Manual unit movement works
✅ Base destruction and episode reset works
✅ No parser errors or game freezing

--- a/ai/installing.ipynb
+++ b/ai/installing.ipynb
@@ -1,22 +1,10 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "initial_id",
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    ""
-   ]
-  },
-  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-12T11:51:17.806547Z",
-     "start_time": "2025-09-12T11:51:17.782353Z"
+     "end_time": "2025-10-22T10:01:32.638440Z",
+     "start_time": "2025-10-22T10:01:32.613419Z"
     }
    },
    "cell_type": "code",
@@ -35,25 +23,17 @@
      "output_type": "stream",
      "text": [
       "Python: 3.10.11 (tags/v3.10.11:7d4cc5a, Apr  5 2023, 00:38:17) [MSC v.1929 64 bit (AMD64)]\n",
-      "Exe   : C:\\Users\\Michael\\Documents\\GODOT\\fhtw-sepj\\neural-front_rogue-protocol\\ai\\.venv1\\Scripts\\python.exe\n",
+      "Exe   : C:\\Users\\Michael\\Documents\\GODOT\\fhtw-sepj-refactor\\ai\\.venv\\Scripts\\python.exe\n",
       "Paths : \n",
-      "  - C:\\Users\\Michael\\Documents\\GODOT\\fhtw-sepj\\neural-front_rogue-protocol\\ai\\.venv1\n",
-      "  - C:\\Users\\Michael\\Documents\\GODOT\\fhtw-sepj\\neural-front_rogue-protocol\\ai\\.venv1\\lib\\site-packages\n",
+      "  - C:\\Users\\Michael\\Documents\\GODOT\\fhtw-sepj-refactor\\ai\\.venv\n",
+      "  - C:\\Users\\Michael\\Documents\\GODOT\\fhtw-sepj-refactor\\ai\\.venv\\lib\\site-packages\n",
       "  - C:\\Users\\Michael\\AppData\\Roaming\\Python\\Python310\\site-packages\n",
       "Has 'tree'? True\n",
-      "OS: Windows-10-10.0.26100-SP0\n"
+      "OS: Windows-10-10.0.26200-SP0\n"
      ]
     }
    ],
    "execution_count": 1
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "bc9d14272d46f22d"
   }
  ],
  "metadata": {
